<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.intelliworkz.admin.admingujaratabroad.NewsAddActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgNewsAdd"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/gallery" />

            <Button
                android:id="@+id/btnImgChoose"
                style="@style/ButtonStyle"
                android:background="@drawable/button_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_chooseimage"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <Spinner
                android:id="@+id/spCat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="5dp"
                android:background="@android:drawable/btn_dropdown" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_newsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/txtNewsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/txt_hint_newstitle"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_newsInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp">
                <EditText
                    android:id="@+id/txtNewsInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@android:drawable/editbox_background"
                    android:ems="10"
                    android:maxLines="5"
                    android:minLines="5"
                    android:scrollbars="vertical"
                    android:gravity="top"
                    android:hint="@string/txt_hint_newsinfo"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/btnNewsAdd"
                style="@style/ButtonStyle"
                android:background="@drawable/button_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_add_news"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
