<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.intelliworkz.admin.admingujaratabroad.VideoAddActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivVideoImgAdd"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/video" />

            <Button
                android:id="@+id/btnVideoUpload"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:text="@string/btn_choosevideo"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_videoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/txtVideoTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/txt_hint_videotitle"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/btnVideoAdd"
                style="@style/ButtonStyle"
                android:background="@drawable/button_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_add_video"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
